# silabs-firmware-builder

./: .gitignore  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml
data/: silabs-adapter-with-router-firmware-converter.js
manifests/: tubeszb-BM24-bootloader.yaml  tubeszb-mgm24-hw-max_ncp-uart-hw.yaml  tubeszb-mgm24-hw_ncp-uart-hw.yaml
manifests/aeotec/: aeotec_zga008_firmware_eraser.yaml  aeotec_zga008_openthread_rcp.yaml  aeotec_zga008_openthread_rcp.yaml.disabled  aeotec_zga008_zigbee_ncp.yaml  aeotec_zga008_zigbee_router.yaml
manifests/easyiot/: easyiot_zb-gw04-1v1_firmware_eraser.yaml  easyiot_zb-gw04-1v1_openthread_rcp.yaml  easyiot_zb-gw04-1v1_openthread_rcp.yaml.disabled  easyiot_zb-gw04-1v1_zigbee_ncp.yaml  easyiot_zb-gw04-1v1_zigbee_ncp_hb.yaml  easyiot_zb-gw04-1v1_zigbee_router.yaml  easyiot_zb-gw04-1v2_firmware_eraser.yaml  easyiot_zb-gw04-1v2_openthread_rcp.yaml  easyiot_zb-gw04-1v2_openthread_rcp.yaml.disabled  easyiot_zb-gw04-1v2_zigbee_ncp.yaml  easyiot_zb-gw04-1v2_zigbee_router.yaml  easyiot_zb-gw04_bootloader.yaml
manifests/inswift/: inswift_zbm-mg24_openthread_rcp.yaml  inswift_zbm-mg24_zigbee_ncp.yaml  inswift_zbm-mg24_zigbee_router.yaml
manifests/nabucasa/: nabucasa_skyconnect_bootloader.yaml  nabucasa_skyconnect_firmware_eraser.yaml  nabucasa_skyconnect_openthread_rcp.yaml  nabucasa_skyconnect_openthread_rcp.yaml.disabled  nabucasa_skyconnect_zigbee_ncp.yaml  nabucasa_skyconnect_zigbee_router.yaml  nabucasa_yellow_bootloader.yaml  nabucasa_yellow_bootloader.yaml.disabled  nabucasa_yellow_firmware_eraser.yaml  nabucasa_yellow_openthread_rcp.yaml  nabucasa_yellow_openthread_rcp.yaml.disabled  nabucasa_yellow_zigbee_ncp.yaml  nabucasa_yellow_zigbee_ncp.yaml.disabled  nabucasa_zbt-2_bootloader.yaml  nabucasa_zbt-2_openthread_rcp.yaml  nabucasa_zbt-2_zigbee_ncp.yaml  nabucasa_zbt-2_zigbee_router.yaml
manifests/smlight/: smlight_slzb06Mg24_bootloader.yaml  smlight_slzb06Mg24_openthread_rcp.yaml  smlight_slzb06Mg24_zigbee_ncp.yaml  smlight_slzb06Mg24_zigbee_router.yaml  smlight_slzb06Mg26_bootloader.yaml  smlight_slzb06Mg26_openthread_rcp.yaml  smlight_slzb06Mg26_zigbee_ncp.yaml  smlight_slzb06Mg26_zigbee_router.yaml  smlight_slzb06m_bootloader.yaml  smlight_slzb06m_firmware_eraser.yaml  smlight_slzb06m_openthread_rcp.yaml  smlight_slzb06m_opentread_rcp.yaml  smlight_slzb06m_opentread_rcp.yaml.disabled  smlight_slzb06m_zigbee_ncp.yaml  smlight_slzb06m_zigbee_ncp_hb.yaml  smlight_slzb06m_zigbee_router.yaml  smlight_slzb07-noled_zigbee_router.yaml  smlight_slzb07Mg24-noled_zigbee_router.yaml  smlight_slzb07Mg24_bootloader.yaml  smlight_slzb07Mg24_firmware_eraser.yaml  smlight_slzb07Mg24_openthread_rcp.yaml  smlight_slzb07Mg24_opentread_rcp.yaml.disabled  smlight_slzb07Mg24_zigbee_ncp.yaml  smlight_slzb07Mg24_zigbee_router.yaml  smlight_slzb07_bootloader.yaml  smlight_slzb07_firmware_eraser.yaml  smlight_slzb07_openthread_rcp.yaml  smlight_slzb07_opentread_rcp.yaml.disabled  smlight_slzb07_zigbee_ncp.yaml  smlight_slzb07_zigbee_router.yaml
manifests/sonoff/: sonoff_dongle-lmg21_openthread_rcp.yaml  sonoff_dongle-lmg21_zigbee_ncp.yaml  sonoff_dongle-lmg21_zigbee_router.yaml  sonoff_dongle-m_openthread_rcp.yaml  sonoff_dongle-m_zigbee_ncp.yaml  sonoff_dongle-m_zigbee_router.yaml  sonoff_dongle-pmg24_openthread_rcp.yaml  sonoff_dongle-pmg24_zigbee_ncp.yaml  sonoff_dongle-pmg24_zigbee_router.yaml  sonoff_zbdonglee_firmware_eraser.yaml  sonoff_zbdonglee_openthread_rcp.yaml  sonoff_zbdonglee_openthread_rcp.yaml.disabled  sonoff_zbdonglee_zigbee_ncp.yaml  sonoff_zbdonglee_zigbee_ncp_hb.yaml  sonoff_zbdonglee_zigbee_router.yaml
manifests/sparkfun/: sparkfun_mgm240p_bootloader.yaml  sparkfun_mgm240p_firmware_eraser.yaml  sparkfun_mgm240p_openthread_rcp.yaml  sparkfun_mgm240p_openthread_rcp.yaml.disabled  sparkfun_mgm240p_zigbee_ncp.yaml  sparkfun_mgm240p_zigbee_ncp_hb.yaml  sparkfun_mgm240p_zigbee_router.yaml
manifests/tubeszb/: TubeZMGM24RCP.yaml  tubeszb-BM-MG24B2-hw-max_ncp-uart-hw.yaml  tubeszb-BM24-bootloader.yaml  tubeszb-BM24-openthread_rcp.yaml  tubeszb-BM24-router-zigbee_router_swflow.yaml  tubeszb-BM24-zigbee_ncp.yaml  tubeszb-BM24-zigbee_router.yaml  tubeszb-bm24-bootloader.yaml  tubeszb-bm24-openthread_rcp.yaml  tubeszb-bm24-zigbee_ncp.yaml  tubeszb-bm24-zigbee_router.yaml  tubeszb-mgm21-2023-sw_ncp-uart-hw.yaml  tubeszb-mgm24-bootloader.yaml  tubeszb-mgm24-firmware-eraser.yaml  tubeszb-mgm24-firmware_eraser.yaml  tubeszb-mgm24-hw-max_ncp-uart-hw.yaml  tubeszb-mgm24-hw-ncp-uart-hw.yaml  tubeszb-mgm24-hw-ncp-uart-hw_2025.yaml  tubeszb-mgm24-hw_ncp-uart-hw.yaml  (+28 more)
sdk_patches/: openthread-efr32-radio-enable-gp.patch
src/bootloader-uart-xmodem_MGM240PB32VNN/bootloader-uart-xmodem_MGM240PB32VNN_cmake/: CMakeLists.txt  CMakePresets.json  bootloader-uart-xmodem_MGM240PB32VNN.cmake
src/ncp-uart-hw_MGM240PA32VNN/ncp-uart-hw_MGM240PA32VNN_cmake/: CMakeLists.txt  CMakePresets.json  ncp-uart-hw_MGM240PA32VNN.cmake
tools/: build_project.py  create_gbl.py
(+63 files in other folders)
